# cartero-tui

./: .gitignore  Cargo.toml  README.md  cartero.json  cartero.json_old  my-file.txt
.config/: config.json5
crs/: main.rs
src/: action.rs  app.rs  components.rs  config.rs  main.rs  tui.rs  utils.rs
src/components/: home.rs  home_old.rs
src/components/home/: headers.rs  mod.rs  path.rs  payload.rs  querystring.rs  request_list.rs  request_response.rs  server.rs  subcomponent.rs
src/repository/: local_storage.rs
